# amocrm-cli

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
.serena/: project.yml
amocrm/: __init__.py  app.py  client.py  exceptions.py
amocrm/auth/: config.py  oauth.py  token.py
amocrm/commands/: account.py  auth.py  calls.py  catalogs.py  chats.py  companies.py  contacts.py  custom_fields.py  events.py  files.py  leads.py  loss_reasons.py  notes.py  output.py  pipelines.py  tags.py  tasks.py  unsorted.py  users.py  webhooks.py
amocrm/resources/: __init__.py  account.py  base.py  calls.py  catalogs.py  chats.py  companies.py  contacts.py  custom_fields.py  events.py  files.py  leads.py  loss_reasons.py  notes.py  pipelines.py  tags.py  tasks.py  unsorted.py  users.py  webhooks.py
docs/: reference.md
skills/: amocrm-cli.md
tests/: conftest.py  test_client.py
tests/test_auth/: test_config.py  test_oauth.py  test_token.py
tests/test_commands/: test_account.py  test_auth.py  test_calls.py  test_catalogs.py  test_chats.py  test_companies.py  test_contacts.py  test_custom_fields.py  test_events.py  test_files.py  test_leads.py  test_loss_reasons.py  test_notes.py  test_pipelines.py  test_tags.py  test_tasks.py  test_unsorted.py  test_users.py  test_webhooks.py
tests/test_resources/: test_account.py  test_base.py  test_calls.py  test_catalogs.py  test_chats.py  test_companies.py  test_contacts.py  test_custom_fields.py  test_events.py  test_files.py  test_leads.py  test_loss_reasons.py  test_notes.py  test_pipelines.py  test_tags.py  test_tasks.py  (+3 more)
(+5 files in other folders)
