[project]
name = "amocrm-cli"
version = "0.1.0"
description = "AmoCRM API v4 — CLI tool and Python library"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "respx>=0.21",
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.scripts]
amocrm = "amocrm.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amocrm"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
